<resources>
    <string name="app_name">Çankaya ATS</string>
    <string name="email_error">Enter a valid e-mail address</string>
    <string name="student_ID_error">Enter a valid student ID number</string>
    <string name="name_error">Enter a valid name</string>
    <string name="surname_error">Enter a valid surname</string>
    <string name="password_error">Password should be at least 6 characters. \n
        Password should contains at least 1 uppercase letter \n
        1 digit and 1 special character (. - _ ! *)</string>
    <string name="nav_home">Home</string>
    <string name="nav_report">Reports</string>
    <string name="nav_logout">Logout</string>
    <string name="lecturer_login_string">Lecturer Login</string>
    <string name="login_text_activity">Login</string>
    <string name="registration_text_activity">Registration</string>
    <string name="welcome_text_main">Welcome to Attendance Tracking System</string>
    <string name="lecturer_register_activity">Lecturer Register</string>
    <string name="e_mail_login">E-mail</string>
    <string name="password_login">Password</string>
    <string name="login_button_lecturer">Logın</string>
    <string name="e_mail_register_lecturer">E-mail</string>
    <string name="password_register_lecturer">Password</string>
    <string name="name_lecturer_register">Name</string>
    <string name="surname_register_lecturer">Surname</string>
    <string name="register_button_lecturer">Regıster</string>
    <string name="school_id_login">School ID</string>
    <string name="password_login_student">Password</string>
    <string name="login_student_button">Logın</string>
    <string name="school_id_register_id">School ID</string>
    <string name="password_student_register">Password</string>
    <string name="e_mail_register_student">E-mail</string>
    <string name="name_register_student">Name</string>
    <string name="surname_register_student">Surname</string>
    <string name="register_student_button">Regıster</string>
    <string name="change_password">Change Password</string>
    <string name="reportProblem">Report Problem</string>
    <string name="beacon_conf">Beacon Configuration</string>
    <string name="course_settings">Course Settings</string>
    <string-array name="settings_items">
        <item>Withdraw from a course</item>
        <item>Change password</item>
        <item>Report a problem</item>
        <item>Logout</item>
    </string-array>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_e_mail_address">Enter your e-mail address</string>
    <string name="send_e_mail">SEND E-MAIL</string>
    <string name="taken_image">Taken Image</string>
    <string name="logo">logo</string>
    <string name="choose_course_code">Choose Course Code</string>
    <string name="avatar_text">avatar</string>
    <string name="take_picture">Take Pıcture</string>
    <string name="x">X</string>
    <string name="mark_as_attended">Mark as Attended</string>
    <string name="secure_mode">Secure Mode</string>
    <string name="course_code">Course Code</string>
    <string name="nearly_attended">Nearly attended</string>
    <string name="fully_attended">Fully attended</string>
    <string name="save">Save</string>
    <string name="issue">Issue :</string>
    <string name="enter_a_subject">Enter a subject</string>
    <string name="message">Message :</string>
    <string name="enter_detailed_information_about_your_problem">Enter detailed information about your problem</string>
    <string name="send">Send</string>
    <string name="enter_token">Enter Token:</string>
    <string name="show">Show</string>
    <string name="cancel">Cancel</string>
    <string name="nearly_text">Nearly</string>
    <string name="attended_text">Attended</string>
    <string name="absent_text">Absent</string>
    <string name="mark_as_absent">Mark as Absent</string>
    <string name="select_the_course_that_you_want_to_attend_from_below">Select the course that you want to attend from below</string>
</resources>
